gal_label_watershed is the new name for gal_label_oversegment
The name "oversegment" is very old in Gnuastro. In those days, we called it
over-segmentation because it was building the profiles from the local
maximums, not local minimums as in the watershed algorithm. But now, it can
also build from the minimums. Since the watershed algorithm name is very
well known, it is thus better to use that name. Until version 0.5, this was
only available in the Segment program, so it wasn't visible to the outside
world and I had more important things to do. But now that it is indepedent
library function, its important to give it a recognizable name.

--- a/NEWS
+++ b/NEWS
@@ -87,7 +87,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     gal_jpeg_read: Reads input JPEG image into `gal_data_t'.
     gal_jpeg_write: Writes a `gal_data_t' into a JPEG file.
     gal_label_grow_indexs: grow known indexs into desired areas.
-    gal_label_oversegment: apply over-segmentation to an input dataset.
+    gal_label_watershed: apply watershed algorithm on desired region.
     gal_label_clump_significance: measure significance of all clumps in region.
     gal_pdf_name_is_pdf: Returns 1 if given filename is PDF.
     gal_pdf_suffix_is_pdf: Returns 1 if given suffix is PDF.
